[WIP] Fixing support for javafx